renamed index.html. date output working

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main>
@@ -15,15 +16,16 @@
 
             <fieldset>
                 <div>
+                    <p id="weima">oi</p>
                     <form>
                         <div>
                             <label for="data_inicial">Essa ficha é referente à data de: </label>
-                            <input type="date" id="data_inicial">
+                            <input type="date" id="data_inicial" value="2023-09-01">
                         </div>
     
                         <div>
                             <label for="data_final">a: </label>
-                            <input type="date" id="data_final">
+                            <input type="date" id="data_final" value="2023-09-20">
                         </div>
     
                         <div>
