text area added

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             <div id="horarios">
 
             </div>
+            <div id="horarios-textarea">
+                <textarea id="text-area" cols="30" rows="50"></textarea>
+            </div>
        </div>
     </main>
 </body>
