started adding time

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <h3>Segunda-feira:</h3>
                             <div>
                                 <label for="horario_inicial_segunda">Horário de início</label>
-                                <input type="time" id="horario_inicial_segunda">
+                                <input type="time" id="horario_inicial_segunda" value = "10:00">
                             </div>
     
                             <div>
