--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
             <h2>Preenchimento Automático Ficha de Atendimento</h2>
             <h3>UTFPR</h3>
 
-            <script src="script.js"></script>
+            <script src="./script.js"></script>
 
             <fieldset>
                 <div>
