inicio de estilos

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
 
 <body>
     <main>
-        <div id="title">
-            <h2>Preenchimento Automático Ficha de Atendimento</h2>
-            <h3>UTFPR</h3>
-
+        <div>
+            <div id="title">
+                <h2>Preenchimento Automático Ficha de Atendimento</h2>
+                <h3>UTFPR</h3>
+                <p>Este projeto foi desenvolvido com o objetivo de auxiliar os monitores a preencherem suas fichas de frequência.</p>
+            </div>
+            
             <script src="./script.js"></script>
 
             <fieldset>
                 <div>
-                    <p id="weima">oi</p>
+                    
                     <form>
                         <div>
                             <label for="data_inicial">Essa ficha é referente à data de: </label>
