added error alert

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ficha monitoria</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
     <main>
-        <div>
+        <div id="form-table-wrapper">
             <div id="title">
                 <h2>Preenchimento Automático Ficha de Atendimento</h2>
                 <h3>UTFPR</h3>
