change onclick to oninput

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                                     <label for="num_horarios_segunda">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <select name="num_horarios_segunda" id="num_horarios_segunda" oninput="testando()">
+                                    <select name="num_horarios_segunda" id="num_horarios_segunda" onchange="testando()">
                                         <option value="0">0</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -157,7 +157,7 @@
                                     <label for="num_horarios_terca">Quantidade de vezes que você atua neste dia:
                                     </label>
                                     <input type="number" id="num_horarios_terca" min="0" max="3" value="0"
-                                        onclick="showTimeForms('terca')" class="inputData">
+                                        onchange="showTimeForms('terca')" class="inputData">
                                 </div>
                                 <div class="horarios_semana" id="horarios_terca1">
                                     <div>
@@ -201,7 +201,7 @@
                                     <label for="num_horarios_quarta">Quantidade de vezes que você atua neste dia:
                                     </label>
                                     <input type="number" id="num_horarios_quarta" min="0" max="3" value="0"
-                                        onclick="showTimeForms('quarta')" class="inputData">
+                                        onchange="showTimeForms('quarta')" class="inputData">
                                 </div>
                                 <div class="horarios_semana" id="horarios_quarta1">
                                     <div>
@@ -245,7 +245,7 @@
                                     <label for="num_horarios_quinta">Quantidade de vezes que você atua neste dia:
                                     </label>
                                     <input type="number" id="num_horarios_quinta" min="0" max="3" value="0"
-                                        onclick="showTimeForms('quinta')" class="inputData">
+                                        onchange="showTimeForms('quinta')" class="inputData">
                                 </div>
                                 <div class="horarios_semana" id="horarios_quinta1">
                                     <div>
@@ -289,7 +289,7 @@
                                     <label for="num_horarios_sexta">Quantidade de vezes que você atua neste dia:
                                     </label>
                                     <input type="number" id="num_horarios_sexta" min="0" max="3" value="0"
-                                        onclick="showTimeForms('sexta')" class="inputData">
+                                        onchange="showTimeForms('sexta')" class="inputData">
                                 </div>
                                 <div class="horarios_semana" id="horarios_sexta1">
                                     <div>
@@ -333,7 +333,7 @@
                                     <label for="num_horarios_sabado">Quantidade de vezes que você atua neste dia:
                                     </label>
                                     <input type="number" id="num_horarios_sabado" min="0" max="3" value="0"
-                                        onclick="showTimeForms('sabado')" class="inputData">
+                                        onchange="showTimeForms('sabado')" class="inputData">
                                 </div>
                                 <div class="horarios_semana" id="horarios_sabado1">
                                     <div>
