changed time form

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
                                 <div class="quantidade">
                                     <label for="num_horarios_domingo">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <input type="number" id="num_horarios_domingo" min="0" max="3" value="0"
-                                        onchange="showTimeForms('domingo')" class="inputData">
+                                    <select name="num_horarios_domingo" id="num_horarios_domingo"
+                                        onchange="testando('domingo')">
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
                                 </div>
                                 <div class="horarios_semana" id="horarios_domingo1">
                                     <div>
@@ -108,7 +113,8 @@
 
                                     <label for="num_horarios_segunda">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <select name="num_horarios_segunda" id="num_horarios_segunda" onchange="testando()">
+                                    <select name="num_horarios_segunda" id="num_horarios_segunda"
+                                        onchange="testando('segunda')">
                                         <option value="0">0</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -156,8 +162,13 @@
                                 <div class="quantidade">
                                     <label for="num_horarios_terca">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <input type="number" id="num_horarios_terca" min="0" max="3" value="0"
-                                        onchange="showTimeForms('terca')" class="inputData">
+                                    <select name="num_horarios_terca" id="num_horarios_terca"
+                                        onchange="testando('terca')">
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
                                 </div>
                                 <div class="horarios_semana" id="horarios_terca1">
                                     <div>
@@ -200,8 +211,13 @@
                                 <div class="quantidade">
                                     <label for="num_horarios_quarta">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <input type="number" id="num_horarios_quarta" min="0" max="3" value="0"
-                                        onchange="showTimeForms('quarta')" class="inputData">
+                                    <select name="num_horarios_quarta" id="num_horarios_quarta"
+                                        onchange="testando('quarta')">
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
                                 </div>
                                 <div class="horarios_semana" id="horarios_quarta1">
                                     <div>
@@ -244,8 +260,13 @@
                                 <div class="quantidade">
                                     <label for="num_horarios_quinta">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <input type="number" id="num_horarios_quinta" min="0" max="3" value="0"
-                                        onchange="showTimeForms('quinta')" class="inputData">
+                                    <select name="num_horarios_quinta" id="num_horarios_quinta"
+                                        onchange="testando('quinta')">
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
                                 </div>
                                 <div class="horarios_semana" id="horarios_quinta1">
                                     <div>
@@ -288,8 +309,13 @@
                                 <div class="quantidade">
                                     <label for="num_horarios_sexta">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <input type="number" id="num_horarios_sexta" min="0" max="3" value="0"
-                                        onchange="showTimeForms('sexta')" class="inputData">
+                                    <select name="num_horarios_sexta" id="num_horarios_sexta"
+                                        onchange="testando('sexta')">
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
                                 </div>
                                 <div class="horarios_semana" id="horarios_sexta1">
                                     <div>
@@ -332,8 +358,13 @@
                                 <div class="quantidade">
                                     <label for="num_horarios_sabado">Quantidade de vezes que você atua neste dia:
                                     </label>
-                                    <input type="number" id="num_horarios_sabado" min="0" max="3" value="0"
-                                        onchange="showTimeForms('sabado')" class="inputData">
+                                    <select name="num_horarios_sabado" id="num_horarios_sabado"
+                                        onchange="testando('sabado')">
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                    </select>
                                 </div>
                                 <div class="horarios_semana" id="horarios_sabado1">
                                     <div>
